# supermarket-cashier

./: .gitignore  715-问题5分类.md  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  压力测试报告.md
MYSQL/: add_face_registered_field.sql  update_product_barcode.sql
docs/: Prometheus-Grafana监控指南.md
gbs_commerce_system/: Dockerfile  pom.xml
gbs_commerce_system/src/main/resources/: application.properties  application.yml
gbs_commerce_system_ui/: .env  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  run.txt  vite.config.js
gbs_commerce_system_ui/certs/: 192.168.224.1-key.pem  192.168.224.1.pem  README.md  localhost-key.pem  localhost.pem
gbs_commerce_system_ui/mcp_server/: .env  Agent_HTTP_Proxy.py  Baidu_TTS_HTTP_test.py  Baidu_TTS_MCP.py  Dockerfile  Member_Service_HTTP_test.py  Member_Service_MCP.py  Order_Service_HTTP_test.py  Order_Service_MCP.py  TTS_HTTP_Proxy.py  Unified_MCP_Service.py  cherry_studio_config.json  db_utils.py  main.py  pyproject.toml  repositories.py  requirements.txt  start_all_mcp.sh  start_local.bat  stop_all_mcp.sh  stop_local.bat
gbs_commerce_system_ui/src/: App.vue  main.js
gbs_commerce_system_ui/src/api/: request.js
gbs_commerce_system_ui/src/api/modules/: agent.js  asr.js  assistant.js  inventory.js  login.js  member.js  menu.js  order.js  (+5 more)
gbs_commerce_system_ui/src/components/: BarcodeScanner.vue  Layout.vue  Receipt.vue  SmartAgentWidget.vue
gbs_commerce_system_ui/src/router/: index.js
test/jmeter-results/: results.jtl
test/jmeter-scripts/: high-load-test.jmx  product-list-test.jmx
(+120 files in other folders)
