








[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
   "mcp[cli]>=1.21.1", 
   "fastmcp",
    "fastapi",
    "huaweicloudsdksis",
    "huaweicloudsdkcore",
     "requests",
    "uvicorn",
    "python-multipart",
    "pymysql>=1.1.0"
]

